# vLLM-OpenAI-Compatible-Server-Gateway-Benchmarks

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CODEOWNERS  CONTRIBUTING.md  LICENSE  Makefile  README.md  ROADMAP.md  pyproject.toml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml
bench/: run_bench.py
data/: prompts.jsonl
gateway/: Dockerfile
gateway/app/: config.py  limits.py  logging.py  main.py  metrics.py  safety.py
infra/: docker-compose.yml
scripts/: bench.sh  demo.sh  mock_openai_server.py  smoke_test.sh
tests/: test_safety.py
