[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "llm-serving-gateway-bench"
version = "0.1.0"
description = "Local LLM serving stack with vLLM gateway and benchmarking"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [{name = "OpenAI", email = "devnull@example.com"}]
dependencies = [
  "fastapi>=0.110",
  "uvicorn[standard]>=0.27",
  "httpx>=0.27",
  "redis>=5.0",
  "pydantic>=2.6",
  "pydantic-settings>=2.2",
  "tenacity>=8.2",
  "orjson>=3.10",
  "prometheus-client>=0.20",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "pytest-asyncio>=0.23",
  "ruff>=0.4",
  "mypy>=1.9",
  "types-redis>=4.6",
  "types-requests>=2.31",
]

[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]

[tool.ruff.lint.isort]
known-first-party = ["gateway", "bench"]

[tool.mypy]
python_version = "3.11"
strict = true
warn_unused_ignores = true
warn_unreachable = true

[tool.pytest.ini_options]
asyncio_mode = "auto"

[tool.setuptools]
packages = ["gateway", "bench"]
